--- a/style/style.css
+++ b/style/style.css
@@ -345,10 +345,21 @@ footer section.links a img {
 }
 @media screen and (min-width: 1800px) {
   main {
-    height: 55vh;
+    min-height: 55vh;
   }
-  footer {
+  footer.menu {
     position: absolute;
     bottom: 0;
+  }
+  footer {
+    min-height: 25vh;
+  }
+  footer div.logo img {
+    width: 3vw;
+    height: 2vw;
+  }
+  footer section.links a img {
+    height: 2vw;
+    width: 2vw;
   }
 }/*# sourceMappingURL=style.css.map */
