--- a/style/style.scss
+++ b/style/style.scss
@@ -407,7 +407,7 @@ footer {
         //border:3px solid tan;
         min-height: 55vh;
     }
-    footer.menu{
+    footer#menu{
         position: absolute;
         bottom: 0;
     }
