--- a/style/style.scss
+++ b/style/style.scss
@@ -209,6 +209,19 @@ main {
             border-radius: 50px;
             text-decoration-style: none;
         }
+        button{
+            position: absolute;
+            font-size: 1.25rem;
+            right: 8px;
+            top: 10px;
+            height: 45px;
+            width: 45px;
+            background-color: #EBB163;
+            border-style: none;
+            cursor: pointer;
+            border-radius: 50px;
+
+        }
     }
     section.menu{
         //border:2px solid #805720;
@@ -246,6 +259,48 @@ main.menu{
         flex: 3 1 1000px;
     }
     
+}
+main.form {
+    border:2px solid #805720;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    h1{
+        margin-top: 1.5rem;
+        color: #9C5F0E;
+    }
+    form {
+        display: flex;
+        flex-direction: column;
+        width: 50vw;
+        label{
+            font-size: 1.25rem;
+            margin: 1rem 0rem;
+        }
+        input,textarea{
+            border:2px solid #805720;
+            font-size: 1.25rem;
+        }
+        button{
+            padding: 1rem;
+            margin: 1rem 16vw;
+            font-size: 1.25rem;
+            background-color: #A68456;
+            color: white;
+            border-radius: 10px;
+        }
+    }
+    a{  
+        position: absolute;
+        text-decoration: none;
+        background-color: #A68456;
+        padding: 1.15rem 1.5rem;
+        color: white;
+        border-radius: 10px;
+        left: 10px;
+        bottom: 13px;
+    }
 }
 
 footer {
@@ -392,6 +447,14 @@ footer {
                     font-size: 1.2rem;
                     padding: 0.3rem;
                 }
+            }
+        }
+    }
+    main.form{
+        form{
+            button{
+                margin: 1rem 10vw;
+                font-size: 1rem;
             }
         }
     }
